# zkAPI

./: .gitignore  README.md  SPEC.md  book.toml
cairo/: Scarb.toml
cairo/src/: constants.cairo  domains.cairo  lib.cairo  merkle.cairo  pedersen_balance.cairo  request.cairo  types.cairo  withdrawal.cairo  xmss.cairo
cairo/src/request/: program.cairo  public_inputs.cairo  witness.cairo
cairo/src/withdrawal/: program.cairo  public_inputs.cairo  witness.cairo
cairo/src/xmss/: params.cairo  tree.cairo  verify.cairo  wots.cairo
contracts/: foundry.toml
contracts/cache/: solidity-files-cache.json  test-failures
contracts/src/: ZkApiVault.sol
contracts/src/adapters/: FactRegistryAdapter.sol  MockProofAdapter.sol
contracts/src/interfaces/: IZkApiProofAdapter.sol
contracts/src/libraries/: Errors.sol  Events.sol  MerkleUpdateLib.sol  NoteLeafLib.sol  StarkPoseidon.sol  Types.sol
contracts/test/: ZkApiVault.t.sol
docs/src/: SUMMARY.md  cairo.md  contracts.md  flows.md  intro.md  protocol-map.md  rust.md  testing.md
rust/: Cargo.toml
rust/crates/zkapi-cli/: Cargo.toml
rust/crates/zkapi-cli/src/: main.rs
rust/crates/zkapi-client/: Cargo.toml
rust/crates/zkapi-client/src/: config.rs  error.rs  journal.rs  lib.rs  note_state.rs  wallet.rs
rust/crates/zkapi-core/: Cargo.toml
rust/crates/zkapi-core/src/: commitment.rs  leaf.rs  lib.rs  merkle.rs  nullifier.rs  poseidon.rs
rust/crates/zkapi-crypto/: Cargo.toml
rust/crates/zkapi-crypto/src/: lib.rs  pedersen.rs  wots.rs  xmss.rs
rust/crates/zkapi-indexer/: Cargo.toml
rust/crates/zkapi-indexer/src/: events.rs  lib.rs  service.rs  tree_mirror.rs
rust/crates/zkapi-proof/: Cargo.toml
rust/crates/zkapi-proof/src/: lib.rs  mock.rs  request.rs  withdrawal.rs
rust/crates/zkapi-server/: Cargo.toml
rust/crates/zkapi-server/src/: config.rs  error.rs  lib.rs  nullifier_store.rs  processor.rs  provider.rs  routes.rs  signer.rs  watcher.rs
rust/crates/zkapi-types/: Cargo.toml
rust/crates/zkapi-types/src/: domain.rs  felt.rs  inputs.rs  lib.rs  note.rs  serialization.rs  signature.rs  wire.rs
