[workspace]
resolver = "2"
members = [
    "crates/zkapi-types",
    "crates/zkapi-core",
    "crates/zkapi-crypto",
    "crates/zkapi-proof",
    "crates/zkapi-client",
    "crates/zkapi-server",
    "crates/zkapi-indexer",
    "crates/zkapi-cli",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
zkapi-types  = { path = "crates/zkapi-types" }
zkapi-core   = { path = "crates/zkapi-core" }
zkapi-crypto = { path = "crates/zkapi-crypto" }
zkapi-proof  = { path = "crates/zkapi-proof" }
zkapi-client = { path = "crates/zkapi-client" }
zkapi-server = { path = "crates/zkapi-server" }
zkapi-indexer = { path = "crates/zkapi-indexer" }

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
hex = "0.4"
base64 = "0.22"

# Arkworks (Stark curve Pedersen commitment)
ark-ff  = "0.5"
ark-ec  = "0.5"
ark-std = "0.5"

# Hashing
sha3 = "0.10"

# Starknet crypto (Poseidon, Stark curve)
starknet-crypto = "0.8"
starknet-curve = "0.6"
starknet-types-core = "0.2"

# Lazy initialization
lazy_static = "1.5"

# Randomness
rand = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP
axum    = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
thiserror = "2.0"
anyhow    = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
