[package]
name = "zkapi-core"
description = "Domain constants, Merkle helpers, and balance commitment helpers for zkAPI"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
zkapi-types     = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
hex             = { workspace = true }
sha3            = { workspace = true }
thiserror       = { workspace = true }
starknet-crypto      = { workspace = true }
starknet-types-core  = { workspace = true }
