[package]
name = "zkapi-indexer"
description = "Mirrors contract events into local Merkle tree view for zkAPI"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
zkapi-types = { workspace = true }
zkapi-core  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
