[package]
name = "zkapi-proof"
description = "Proof generation and verification orchestration for zkAPI"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
zkapi-types  = { workspace = true }
zkapi-core   = { workspace = true }
zkapi-crypto = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
hex          = { workspace = true }
sha3         = { workspace = true }
thiserror       = { workspace = true }
anyhow          = { workspace = true }
tracing         = { workspace = true }
starknet-crypto = { workspace = true }
